...
        stopLeftSwipe={buttonWidth + 25}
        rightOpenValue={buttonWidth * -1}
        stopRightSwipe={(buttonWidth + 25) * -1}
        ref={ref}>
        <View style={styles.rowBack}>
          <TouchableOpacity
            testID="task:completeSuccessButton"
            style={{
              flex: 1,
              alignItems: 'flex-start',
              justifyContent: 'center',
              backgroundColor: greenColor,
              width: buttonWidth,
...
            <RightButton width={buttonWidth} />
          </TouchableOpacity>
        </View>
        <Box
          className="bg-secondary-600"
          style={{ paddingTop: 28, paddingHorizontal: 28, paddingBottom: 28 + bottomInset, width }}
          testID="task:completeButton">
          <Text style={{ fontSize: 20, textAlign: 'center', color: '#fff' }}>
            {t('COMPLETE_TASK')}
          </Text>
        </Box>
      </SwipeRow>
    </View>
...
