...
      />
      <Tab.Screen
        name="CourierTaskList"
        component={screens.CourierTaskListPage}
        options={({ navigation }) => ({
          tabBarLabel: i18n.t('TASK_LIST'),
          tabBarButtonTestID: 'messengerTabList',
          tabBarIcon: ({ color }) => {
            return <Icon as={List} size="xl" style={{ color }} />;
          },
        })}
      />
    </Tab.Navigator>
...
